# hexlet-python-homework4

./: pyproject.toml
db/: fill_data.sql  init_db.sql
src/: Application.py  MainMenu.py  MainWindow.py  Teacher.py  Test.py  Variant.py  __main__.py  settings.py
