[tool.poetry]
name = "hexlet-python-homework3"
version = "0.1.0"
description = ""
authors = ["Andrei Belskii 3107d"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyqt5 = "^5.15.11"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
